chore: rename project to BitVideo Insight and update repository URL

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Video Transcriber</title>
+    <title>BitVideo Insight - 比特币视频分析助手</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/9.1.2/marked.min.js"></script>
@@ -418,7 +418,7 @@
                     <i class="fas fa-chevron-down"></i>
                 </button>
             </div>
-            <h1><i class="fas fa-video"></i> <span data-i18n="title">AI Video Transcriber</span></h1>
+            <h1><i class="fas fa-chart-line"></i> <span data-i18n="title">BitVideo Insight</span></h1>
             <p data-i18n="subtitle">Supports automatic transcription and AI summary for YouTube, Tiktok, Bilibili and other platforms</p>
         </div>
 
